# WoWClientRebuilder

./: .gitignore  CMakeLists.txt  README.md
src/cli/: wowrebuild.rc
src/wcrcore/: download.cpp  download.h  fetch.cpp  mpq.cpp
tests/: test_download.cpp
